# Learn-C-

./: .gitignore  exps.txt  increasing_arrays.cpp  missing_number.cpp  repetitions.cpp  run  weird_algo.cpp
algos/: bubbleSort.cpp  insertionSort.cpp  iterativeMergeSort.cpp  mergeSort.cpp  poly.cpp  selectionSort.cpp
algos/cp/: backtracking.cpp  bitManipulation.cpp  bitOperations.cpp  inputs.cpp  notes  numbers.cpp  permutations.cpp  problems.txt  sets_ops.cpp  weirdNumber.cpp
algos/leetcode/: addTwoNumbers.cpp  twoSums.cpp
algos/sections/: advices.txt  useful_links.txt
c++_learn/: MyString.cpp  MyString1_v1.cpp  abstractClass.cpp  agregateInitialization.cpp  asser_function.cpp  assignment_operator.cpp  autoConversion.cpp  binary_op_-0+0.cpp  binary_operators.cpp  brief_introduction_macros.cpp  bussinesMan.cpp  circle_exercises.cpp  clases.cpp  classFriend.cpp  const_cast.cpp  const_expr_classes.cpp  const_expr_learn.cpp  courses.txt  currentPage.txt  currentPage.txt}  date_exercise.cpp  define_function_macro.cpp  define_preprocessor_1.h  define_preprocessor_2.h  define_preprocessor_main.cpp  dudes_for_practice.txt  dynInteger_v2.cpp  dynIntegers.cpp  dynamic_cast.cpp  dynamic_cast_and_RTTI.cpp  equal_noeaqual_operator.cpp  final_inheritance.cpp  final_override.cpp  fish_polimorphism.cpp  getline.cpp  inheritance_initialization.cpp  inheritance_overwrite_methods.cpp  inheritance_private_linking.cpp  inheritance_protected_public.cpp  inheritance_public_public.cpp  (+48 more)
c++_learn/T.O/: l_values.cpp  part2_heapStack.cpp  part3_constructors.cpp  part3_contructor_initializer.cpp  part6_delegating_constructors.cpp  part_7_assingmentOperator.cpp
c++_learn/algoritms/: nieve.cpp  snow.cpp
c++_learn/t.o/: exam3.rar  move_constructor.cpp  newMvConstructor.cpp  part1_classes.cpp  part4_copyConstructor.cpp  part5_initializerLists.cpp  part8_copyConstructor.cpp  part9_moveSemantics.cpp  (+2 more)
c++_learn/t.o/patterns/buildAuto/: CMakeLists.txt  main.cpp
c++_learn/t.o/patterns/buildAuto/Auto/: CMakeLists.txt  auto.h
c++_learn/t.o/patterns/buildAuto/BuilderAuto/: CMakeLists.txt  builder.cpp  builderAuto.h
c++_learn/t.o/patterns/buildAuto/Piece/: piece.cpp  pieces.h  planPiece.h
(+169 files in other folders)
